# tpu-raiden

./: .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD  CHANGELOG.md  Dockerfile  LICENSE  MODULE.bazel  README.md  agents.json  build.sh  build_oss.md  build_raw_transfer.sh  disagg_kv_cache_manager.md  global_prefix_cache.md  pyproject.toml  raiden_controller_architecture.md  requirements.txt  run_numa_sweeps.sh  run_test.sh  run_tests.sh  sitecustomize.py  test.txt  test_disagg_cpu.sh  test_disagg_imports.py  test_disagg_imports.sh  test_raw_transfer.sh  tpu_raiden_worklog.md
.github/: README.md  actionlint.yaml  workflows
.github/workflows/: ab_perf_gate.yml  analyze_raw_samples.yml  canary_ab_dist.yml  canary_drift.yml  check_baselines.yml  clang_format.yml  confirm_commit.yml  device_test.yml  dist.yml  h2h_compare.txt  h2h_compare.yml  h2h_compare_bap.yml  lint.yml  nightly.yml  perf_bisect.yml  presubmit.yml  probe_window.yml  record_h2d_d2h_baselines.yml  roofline.yml  run_benchmarks.yml  test_multihost  test_multihost.yml  tpu7x_smoke.yml  update_d2h_h2d_baseline.yml  update_d2h_h2d_record.yml
.github/workflows /: run_benchmarks.yml
.tmp/results/: d2h_lockbuf.txt  d2h_no_pin.txt  d2h_pin.txt  dma.jsonl  h2d_lockbuf.txt  h2d_no_pin.txt  h2d_pin.txt  record.json
agents/tpu-raiden-coder/: agent.json  config.yaml
agents/tpu-raiden-debugger/: agent.json  config.yaml
agents/tpu-raiden-design-reviewer/: agent.json  config.yaml
agents/tpu-raiden-designer/: agent.json  config.yaml
agents/tpu-raiden-xmanager-debugger/: agent.json  config.yaml
api/jax/: BUILD  bench_partial_d2h.py  bench_stage_d2h.py  disagg_kv_cache_manager.cc  disagg_kv_cache_manager.h  disagg_kv_cache_manager.py  disagg_kv_cache_manager_cpu_unit_test.py  disagg_kv_cache_manager_test.py  jax_utils.h  kv_cache_manager.cc  kv_cache_manager.h  kv_cache_manager.py  kv_cache_manager.pyi  kv_cache_manager_ffi.cc  kv_cache_manager_ffi.h  kv_cache_manager_ffi.py  kv_cache_manager_ffi_module.cc  kv_cache_manager_module.cc  kv_cache_manager_perf_test.py  kv_cache_manager_test.py  kv_cache_manager_transfer_test.py  kv_cache_store.py  kv_cache_store.pyi  kv_cache_store_module.cc  kv_cache_store_test.py  mc_jax_ffi_test_main.py  mc_jax_ffi_test_main_test.py  nb_status.h  nb_statusor.h  resharding_engine.py  resharding_planner.py  resharding_planner_test.py  resharding_technical_report.md  resharding_test.py  resharding_test_lib.py  transfer_engine.py  transfer_engine.pyi  transfer_engine_test.py  weight_synchronizer.cc  weight_synchronizer.h  (+7 more)
api/torch/: BUILD  kv_cache_manager.cc  kv_cache_manager.h  kv_cache_manager.py  kv_cache_manager.pyi  kv_cache_manager_module.cc  kv_cache_manager_test.py  kv_cache_manager_transfer_test.py  raiden_transfer_engine.cc  transfer_engine.py  (+9 more)
bazel/: BUILD  wheel_version.bzl
benchmarks/: benchmark_registry.pbtxt
ci/: build_wheel.sh  upload_wheel.sh
ci/wheel/: BUILD.bazel  wheel.bzl
core/: BUILD  host_memory_allocator.cc  host_memory_allocator.h  host_memory_allocator_test.cc  kv_cache_manager_perf_test.cc  kv_cache_manager_with_transfer.cc  kv_cache_manager_with_transfer.h  kv_cache_manager_with_transfer_perf_test.cc  kv_cache_manager_with_transfer_test.cc  numa_thread_pool.cc  numa_thread_pool.h  numa_thread_pool_test.cc  raiden_manager_base.cc  raiden_manager_base.h  raiden_manager_base_test.cc  raw_transfer.md  raw_transfer_core.h  raw_transfer_core_test.cc  raw_transfer_impl.h  raw_transfer_impl_test.cc  raw_transfer_perf_test.cc  status_macros.h  tpu_pjrt_manager.cc  tpu_pjrt_manager.h  tpu_pjrt_manager_test.cc  tpu_utils.cc  tpu_utils.h  tpu_utils_test.cc  transfer_engine_base.cc  transfer_engine_base.h  transfer_engine_base_test.cc  utils.h
current_work/: raw_transfer_perf_cpp_results.md
disagg_scripts/: README.md  disagg_env.sh  disagg_node_runner.py  kill_disagg_nodes.sh  run_all_two_node_tests.sh  run_two_node_disagg_test.sh  sync_oss_to_remote.sh
examples/: README.md
experiments/: BUILD  reshard_stage1_e2e.py  reshard_stage1_local_primitive_test.py  reshard_stage2_hybrid_block_acceptance_test.py  reshard_stage3_pool_device_test.py
jaxlib/: BUILD  pyinit_stub.c
kokoro/: BUILD
kv_cache/: BUILD  README.md  disagg_kv_cache_manager_base.cc  disagg_kv_cache_manager_base.h  disagg_kv_cache_manager_base_test.cc  disagg_proxy.py  disagg_src_dst_offsets_and_staging_block.md  kv_cache_manager.cc  kv_cache_manager.h  kv_cache_manager.pyi  kv_cache_manager_base.cc  kv_cache_manager_base.h  kv_cache_manager_pybind.cc  kv_cache_manager_test.cc  kv_cache_manager_test.py  kv_cache_store.cc  kv_cache_store.h  kv_cache_store_internal.cc  kv_cache_store_internal.h  kv_cache_store_internal_test.cc  kv_cache_store_test.cc  logical_block_manager.cc  logical_block_manager.h  logical_block_manager_test.cc  lru_cache_test.cc  raiden_transfer_engine.cc  raiden_transfer_engine.py  raiden_transfer_engine.pyi  raiden_transfer_engine_test.py
one_node_test/: mesaure_stage_d2h.py
plans/: 2026-06-18-setup_venv_and_tpu_verify.md
raiden_lib/: BUILD  __init__.py
raw_transfer/: BUILD  raw_transfer.cc  raw_transfer_impl.h  test_import.py  test_raw_transfer_perf.py
rpc/: BUILD  coordination.proto  coordination_client.cc  coordination_client.h  coordination_client_test.cc  coordination_helper.py  coordination_helper_test.py  raiden_controller.py  raiden_controller_test.py
test/: raw_transfer_compare_benchmark.py
tools/: BUILD  perf_test_runner.py  setup_venv.py  sweep.py
tpu_raiden/: testpresubmit.txt
transport/: BUILD  block_transport.cc  block_transport.h  block_transport_test.cc  mlcl_types.h  peregrine_types.h  raw_buffer_transport.cc  raw_buffer_transport.h  raw_buffer_transport_test.cc  socket_transport.cc  socket_transport.h  socket_transport_test.cc
two_node_test/: README.md  consumer.py  kv_spec.py  producer.py  run_two_node_test.sh
weight_sync/: BUILD  weight_synchronizer_base.cc  weight_synchronizer_base.h  weight_synchronizer_control_service.cc  weight_synchronizer_control_service_test.cc  weight_synchronizer_test.cc
(+535 files in other folders)
