module(name = "tpu_raiden")

bazel_dep(name = "protobuf", version = "32.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_ml_toolchain")
archive_override(
    module_name = "rules_ml_toolchain",
    integrity = "sha256-y3Y1Yi6lJsiSOl6tbpncK6Vc3mrpYTv5stNLPwAPKc4=",
    strip_prefix = "rules_ml_toolchain-84ac62e4db38215a2a7d3ad8cd4d7452134e3ec6",
    urls = ["https://github.com/google-ml-infra/rules_ml_toolchain/archive/84ac62e4db38215a2a7d3ad8cd4d7452134e3ec6.tar.gz"],
)

bazel_dep(name = "jax")
git_override(
    module_name = "jax",
    commit = "a33ed614c58ee8a10d0b7536c50c2609c38500c1",
    remote = "https://github.com/jax-ml/jax.git",
)

bazel_dep(name = "xla")
git_override(
    module_name = "xla",
    commit = "a98e42b8b195e578a97025654f4e7b9b3fb5001a",
    patch_strip = 1,
    patches = [
        "//:third_party/xla/future_sfinae.patch",
    ],
    remote = "https://github.com/openxla/xla.git",
)

bazel_dep(name = "rules_python", version = "1.8.5")
single_version_override(
    module_name = "rules_python",
    patch_strip = 1,
    patches = [
        "//:third_party/py/rules_python_missing_version_safe.patch",
    ],
    version = "1.8.5",
)

bazel_dep(name = "grpc", version = "1.78.0", repo_name = "com_github_grpc_grpc")
single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = [
        "//:third_party/grpc/grpc.patch",
    ],
    version = "1.78.0",
)

third_party = use_extension("@xla//third_party/extensions:third_party.bzl", "third_party_ext")
use_repo(
    third_party,
    "nanobind",
    "stablehlo",
)

new_local_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:local.bzl",
    "new_local_repository",
)

new_local_repository(
    name = "local_torch_headers",
    build_file_content = """
cc_library(
    name = "torch_headers",
    hdrs = glob([
        "include/**/*.h",
        "include/**/*.hpp",
    ]),
    includes = [
        "include",
        "include/torch/csrc/api/include",
    ],
    visibility = ["//visibility:public"],
)
""",
    path = "/home/sixiang_google_com/torchtpu-env/lib/python3.12/site-packages/torch",
)

local_headers_repository = use_repo_rule(
    "//:third_party/local_headers_repo.bzl",
    "local_headers_repository",
)

local_headers_repository(
    name = "local_torch_tpu_headers",
    include_root = "torch_tpu",
    path = "/home/sixiang_google_com/torchtpu-dev/torch_tpu",
)

bazel_dep(name = "abseil-cpp", version = "20260107.1", repo_name = "com_google_absl")

llvm = use_extension("@xla//third_party/extensions:llvm.bzl", "llvm_extension")
use_repo(llvm, "llvm-project")

jax_python_wheel_repository = use_repo_rule(
    "@jax//jaxlib:jax_python_wheel.bzl",
    "jax_python_wheel_repository",
)

bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "nanobind_bazel", version = "2.12.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_google_googletest")

pybind11_internal_configure = use_extension(
    "@pybind11_bazel//:internal_configure.bzl",
    "internal_configure_extension",
)
use_repo(pybind11_internal_configure, "pybind11")

jax_python_wheel_repository(
    name = "jax_wheel",
    version_key = "_version",
    version_source = "@jax//jax:version.py",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(
    python_version = "3.12",
    python_version_env = "HERMETIC_PYTHON_VERSION",
)
python.toolchain(python_version = "3.11")
python.toolchain(python_version = "3.12")
python.toolchain(python_version = "3.13")
python.toolchain(python_version = "3.14")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
use_repo(pip, pypi = "jax_pypi")

override_repo(
    pip,
    xla_pypi = "pypi",
)
