# Copyright 2026 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Wheel metadata for tpu_raiden. The Bazel `py_wheel` rule in
# //ci/wheel:raiden_wheel reads [project].version from here (via
# //bazel:wheel_version.bzl) and appends WHEEL_VERSION_EXTRAS (e.g.
# ".dev<timestamp>") at build time. There is no setuptools build-system: the
# wheel is built by Bazel, not pip.
[project]
name = "tpu_raiden"
version = "0.0.1"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "High-bandwidth PJRT raw-transfer / KV-cache DMA engine for TPU (JAX + PyTorch/torch_tpu)."

# Runtime dependencies that live on a public index. NOTE: the torch path also
# requires `torch_tpu`, which is published only to a private Artifact Registry
# and is therefore NOT declared here — it is a documented prerequisite for the
# torch extensions and must match the torch_tpu build raiden was compiled
# against (jax/jaxlib/libtpu are version-coupled too; keep them in lockstep).
dependencies = [
    "jax==0.10.2",
    "jaxlib==0.10.2",
    "libtpu==0.0.42.1",
    "tpu-info==0.7.1",
    "numpy",
    "absl-py",
    "torch",
    "requests",
]
